--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.13",
     "sequelize": "^6.37.2",
+    "smile-identity-core": "^3.1.0",
     "stripe": "^15.1.0"
   },
   "devDependencies": {
