phone-verification-be

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,7 @@ STRIPE_PRIVATE_KEY = "sk_test_51P4n3zP9HJvmW413jWOSOMhGxwqghqY26Ueb1qHRJVxY9WMI4
 FRONT_END_URL = "http://localhost:3000"
 # server port
 PORT=3001
+#phone verification
+TWILIO_ACCOUNT_SID=your_account_sid
+TWILIO_AUTH_TOKEN=your_auth_token
+TWILIO_VERIFY_SERVICE_SID=your_verify_service_sid
