--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.13",
     "sequelize": "^6.37.2",
-    "stripe": "^15.1.0"
+    "stripe": "^15.1.0",
+    "twilio": "^5.2.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
