--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -21,6 +22,7 @@
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.13",
     "sequelize": "^6.37.2",
+    "smile-identity-core": "^3.1.0",
     "stripe": "^15.1.0"
   },
   "devDependencies": {
