--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,8 @@ STRIPE_PRIVATE_KEY = "sk_test_51P4n3zP9HJvmW413jWOSOMhGxwqghqY26Ueb1qHRJVxY9WMI4
 FRONT_END_URL = "http://localhost:3000"
 # server port
 PORT=3001
+
+PARTNER_ID: 'kkkkkkkkk', 
+API_KEY: 'dsfasdfafdddddd', 
+CALLBACK_URL: 'callback_url', 
+SID_SERVER: '0'
